welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: not found: value GetDirection
    var pos:Any=GetDirection()
                ^SnakeBuggle:8: error: type mismatch;
 found   : Any
 required: plm.universe.Direction
    setDirection(pos)
                 ^